# chatwork

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  chatwork.cabal  package.yaml  stack.yaml
sample/: Main.hs
src/: ChatWork.hs
src/ChatWork/: Client.hs  Endpoints.hs  Internal.hs  MonadHttpIO.hs  Types.hs  Utils.hs
src/ChatWork/Endpoints/: Contacts.hs  IncomingRequests.hs  Me.hs  My.hs  Rooms.hs
src/ChatWork/Types/: Base.hs  Contacts.hs  Error.hs  IncomingRequests.hs  Me.hs  My.hs  Rooms.hs
test/: MockServer.hs  Spec.hs
test/ChatWork/Endpoints/: ContactsSpec.hs  IncomingRequestsSpec.hs  MeSpec.hs  MySpec.hs  RoomsSpec.hs
test/ChatWork/Test/: Client.hs  MockServer.hs  MonadHttpIO.hs  Types.hs  Values.hs
test/ChatWork/Test/Values/: Contacts.hs  IncomingRequests.hs  Me.hs  My.hs  Rooms.hs
