name:                chatwork
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matsubara0507/chatwork#readme
license:             MIT
license-file:        LICENSE
author:              MATSUBARA Nobutada
copyright:           2017 MATSUBARA Nobutada
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ChatWork
                     , ChatWork.Endpoints
                     , ChatWork.Endpoints.Me
                     , ChatWork.Endpoints.My
                     , ChatWork.Endpoints.Contacts
                     , ChatWork.Endpoints.IncomingRequests
                     , ChatWork.MonadHttpIO
                     , ChatWork.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , bytestring
                     , connection
                     , data-default-class
                     , http-client
                     , http-client-tls
                     , http-types
                     , req >= 0.3.0
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsubara0507/chatwork
